# aisle-runner-bench

./: .gitignore  PLAN.md  README.md  pyproject.toml
scripts/: run_default_models.py
src/aisle_runner/: __init__.py  benchmark.py  cli.py  models.py
src/aisle_runner/config/: __init__.py  default_models.py
src/aisle_runner/runners/: __init__.py  base.py  browser_use.py
src/aisle_runner/tasks/: __init__.py
src/prepai_eval/: __init__.py  cli.py
src/prepai_eval/runners/: browser_use.py
tasks/: sysco-add-to-cart.yaml  sysco-login.yaml
