[project]
name = "prepai-eval"
version = "0.1.0"
description = "Benchmark suite for browser automation evaluation"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "jupyter>=1.0.0",
]
dspy = [
    "dspy-ai>=2.0.0",
]

[project.scripts]
prepai-eval = "prepai_eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prepai_eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
